--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "netflix-concept",
+  "homepage": "http://godart-corentin.github.io/netflix-tvshow-page-concept",
+  "name": "netflix-tvshow-page-concept",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,6 +20,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.15",
-    "@types/webpack-env": "^1.16.3"
+    "@types/webpack-env": "^1.16.3",
+    "gh-pages": "^3.2.3"
   }
 }
